[package]
name = "pango"
version = "0.0.5"
authors = ["The Gtk-rs Project Developers"]

description = "Rust bindings for the Pango library"
repository = "https://github.com/gtk-rs/pango"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/pango/"

readme = "README.md"

keywords = ["pango", "gtk", "gtk-rs", "gnome"]

[lib]
name = "pango"

[dependencies]
glib = "0.0.5"
libc = "0.1"
pango-sys = "0.2.1"
