[package]
name = "pango"
documentation = "http://gtk-rs.org/docs/pango/"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.9.0"
description = "Rust bindings for the Pango library"
repository = "https://github.com/gtk-rs/pango"
license = "MIT"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/pango", service = "github" }
travis-ci = { repository = "gtk-rs/pango" }

[features]
v1_38 = ["pango-sys/v1_38"]
v1_40 = ["v1_38"]
v1_42 = ["v1_40", "pango-sys/v1_42"]
v1_44 = ["v1_42", "pango-sys/v1_44"]
dox = ["pango-sys/dox", "glib/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true

[dependencies]
gobject-sys = "0.10.0"
glib = "0.10.0"
glib-sys = "0.10.0"
pango-sys = "0.10.0"
libc = "0.2"
bitflags = "1.0"
once_cell = "1.0"

[dev-dependencies]
gir-format-check = "^0.1"
